syntax = "proto3";

import "google/protobuf/empty.proto";
import "sys_core_models.proto";

package v2.sys_core.services;

option go_package = "go.amplifyedge.org/sys-share-v2/sys-core/service/go/rpc/v2";

service DbAdminService {
  rpc Backup(google.protobuf.Empty) returns (v2.sys_core.services.BackupAllResult) {}
  rpc ListBackup(v2.sys_core.services.ListBackupRequest) returns (v2.sys_core.services.ListBackupResult) {}
  rpc Restore(v2.sys_core.services.RestoreAllRequest) returns (v2.sys_core.services.RestoreAllResult){}
}

service BusService {
  rpc Broadcast(v2.sys_core.services.EventRequest) returns (v2.sys_core.services.EventResponse) {}
}

service EmailService {
  rpc SendMail(v2.sys_core.services.EmailRequest) returns (v2.sys_core.services.EmailResponse) {}
}

service AnalyticsService {
  rpc SendAnalyticsEvent(v2.sys_core.services.ModEvent) returns (google.protobuf.Empty) {};
  rpc DownloadAnalytics(v2.sys_core.services.DownloadAnalyticsRequest) returns (v2.sys_core.services.DownloadAnalyticsResponse) {};
}
